--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/java,windows,netbeans
 /02-26_REST_Assured_ErrorHandling/target/
+/02-28_ORM_JPQL/target/
